--- a/src/templates/catalogue/part_detail.html
+++ b/src/templates/catalogue/part_detail.html
@@ -88,14 +88,19 @@
                         data-bs-toggle="collapse" data-bs-target="#shop-collapse"
                         aria-expanded="false" type='button'>
                     Available at stores
-                    <i class="fa-solid fa-shop"></i>
+                    <i class="fa-solid fa-shop"></i> <i class="fa-solid fa-arrow-down-short-wide"></i>
                 </button>
                 <div class="collapse" id="shop-collapse" style="">
                     <ul>
+                        {% if shops %}
                         {% for shop in shops%}
                         <li>{{shop.address}}</li>
                         {% endfor %}
-                    </ul>
+                        </ul>
+                        {% else %}
+                        <p class=" fw-bolder ">Part {{part.part_number}} is out of stock</p>
+                        {% endif %}
+
                 </div>
 
             </div>
@@ -107,7 +112,7 @@
                         data-bs-toggle="collapse" data-bs-target="#dashboard-collapse"
                         aria-expanded="false" type='button'>
                     Reviews
-                    <i class="fa-solid fa-arrow-down-short-wide"></i>
+                    <i class="fa-solid fa-comments"></i> <i class="fa-solid fa-arrow-down-short-wide"></i>
                 </button>
 
 
@@ -134,7 +139,7 @@
                         data-bs-toggle="collapse" data-bs-target="#machine-collapse"
                         aria-expanded="false" type='button'>
                     Where used on
-                    <i class="fa-solid fa-tractor"></i>
+                    <i class="fa-solid fa-tractor"></i> <i class="fa-solid fa-arrow-down-short-wide"></i>
                 </button>
                 <div class="collapse" id="machine-collapse" style="">
                     <table class="table">
