--- a/src/templates/accounts/profile.html
+++ b/src/templates/accounts/profile.html
@@ -3,12 +3,12 @@
 {% block content %}
 <div class="container">
     <div class="container rounded mt-5 mb-5">
-        <form method="POST">
+        <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="row">
                 <div class="col-md-4">
-                    <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img
-                            class="rounded-circle mt-5"
+                    <div class="d-flex flex-column align-items-center text-center p-3 py-5 mt-3"><img
+                            class="rounded-circle"
                             width="262px"
                             src="{{form.photo.value.url}}"
                             alt="avatar">
@@ -28,16 +28,16 @@
                                 {{form.last_name}}
                             </div>
                         </div>
-                        <div class="row mt-3">
+                        <div class="row ">
 
-                            <div class="col-md-12"><label class="labels">Email</label>
+                            <div class="col-md-12 mt-2"><label class="labels">Email</label>
                                 {{form.email}}
                             </div>
-                            <div class="col-md-12"><label class="labels">Phone number</label>
+                            <div class="col-md-12 mt-2"><label class="labels">Phone number</label>
                                 {{form.phone_number}}
                             </div>
                         </div>
-                        <div class="row mt-3">
+                        <div class="row mt-2">
                             <div class="col"><label class="labels">Address</label>
                                 {{form.address}}
                             </div>
@@ -47,6 +47,7 @@
                     </div>
                 </div>
             </div>
+
         </form>
     </div>
 </div>
