--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -54,8 +54,13 @@
                     <a href="#" class="d-block link-light text-decoration-none dropdown-toggle avatar"
                        data-bs-toggle="dropdown"
                        aria-expanded="false">
+                        {% if not user.is_authenticated%}
                         <img src="{% static 'core/empty_avatar.png' %}" alt="mdo" class="rounded-circle"
                              width="60" height="60">
+                        {% else %}
+                        <img src="{{ user.profile.photo.url }}" alt="mdo" class="rounded-circle"
+                             width="60" height="60">
+                        {% endif %}
                     </a>
 
                     <ul class="dropdown-menu dropdown-menu-end text-small shadow">
