--- a/src/templates/cart/cart.html
+++ b/src/templates/cart/cart.html
@@ -12,7 +12,7 @@
         </p>
     </div>
     {% endif %}
-    <form method="get" action="make_order/">
+    <form method="get" action="redirect/">
         {% for part in parts %}
         <div class="row">
             <div class="col-4" id="part_pic_container">
@@ -52,7 +52,7 @@
             <div class="col-3 d-flex flex-column justify-content-center">
                 <div class="row text-center">
                     <div class="col">
-                        <button class="btn btn-secondary " type="button"
+                        <button class="btn btn-secondary" type="button"
                                 onclick="this.parentNode.parentNode.querySelector('input[type=number]').stepDown()">
                             <i class="fas fa-minus"></i>
                         </button>
@@ -71,8 +71,8 @@
                         </button>
                     </div>
                 </div>
-                <!--            </form>-->
             </div>
+
             <div class="col-1 d-flex flex-column justify-content-center ">
                 <a href="{% url 'delete_part_from_cart' part.part_number %}">
                     <button class="btn btn-danger" type="button">
@@ -85,17 +85,15 @@
         {% endfor %}
         <div class="row">
             {% if parts %}
-            <div class="col d-flex flex-column justify-content-center">
-
-                <p class="text-center fs-4 mt-4">
-                    Total: {{total_cart_cost}}
-                </p>
-            </div>
-            <div class="col d-flex flex-column justify-content-center">
-                <button class="btn btn-success text-center fs-4 mt-4 me-5 ms-5" type="submit">
-                    Make order
-                    <i class="fa-regular fa-credit-card buy-icon"></i>
+            <div class="col d-flex flex-column justify-content-center ">
+                <button class="btn btn-success text-center fs-4 mt-3 me-5 ms-5" type="submit">
+                    Update total price: {{total_cart_cost}} <i class="fa-solid fa-arrows-rotate"></i>
                 </button>
+            </div>
+
+            <div class="col d-flex flex-column justify-content-center">
+                <input class="btn btn-warning text-center fs-4 mt-3 me-5 ms-5" type="submit" name="make_order" value="Make order" />
+
             </div>
             {% else %}
             <div class="col">
