--- a/src/templates/accounts/signup.html
+++ b/src/templates/accounts/signup.html
@@ -10,10 +10,14 @@
             <p class="text-center text-danger fs-4 fst-italic">
                 {{message}}
             </p>
+
             {% csrf_token %}
+<!--                {{form.as_p}}-->
+
                 {% for element in form %}
-            <div>{{element}}</div><br/>
+            <p>{{element}}</p>
             {% endfor %}
+<!--            <ul class="errorlist"><li>This password is to common</li><li>This password is entirely numeric</li></ul>-->
             <input type="submit" value="Signup" class="btn btn-warning mt-3 btn-lg">
         </form>
     </div>
